Timeline 0.18.0, released on 30 September 2012
==============================================

New features, enhancements:

  * Zooming with scroll wheel zooms at cursor position instead of center.

Bug fixes:

  * Adding multiple events without closing event dialog, works again.
  * Alert time comparision problem solved
  * Fixed problem with ends-today property


Timeline 0.17.0, released on 15 June 2012
=========================================

This is a new feature release.

New features, enhancements:

  * Possibilty to define alerts on events.
  * Non-period events can be added to container events

Bug fixes:

  * No Error when fitting month, december, when using extended timetype.

Timeline 0.16.0, released on 31 January 2012
============================================

This is a new feature release.

New features, enhancements:

  * Events can be grouped in containers

Bug fixes:

  * Timeline files with non-English names can be opened
  * Creating new locked events does not raise exception

Timeline 0.15.0, released on 30 October 2011
============================================

This is a new feature release.

New features, enhancements:

  * Custom font color for categories
  * Measure distance between events
  * Only break text in balloon if needed to keep balloon on screen

Bug fixes:

  * SVG export can now handle text with non-english characters
  * Long category names are now visible in category editor
  * Timeline repaints after editing category color
  * No year of out range exception in event dialog

Timeline 0.14.0, released on 30 July 2011
=========================================

This is a new feature release.

New features, enhancements:

  * Move all selected events
  * Mark event period as fuzzy and edges will change to triangles
  * Mark event period as locked and edges will be curved and the event can not
    be moved or resized
  * Mark event as ending today and its period will be updated to end today