@@ -61,6 +61,10 @@ class PyTimeNavigationFunctionsSpec(unittest.TestCase):
         self.when_navigating(fit_millennium_fn, "1 Jan 2010", "2 Jan 2010")
         self.then_period_becomes("1 Jan 2000", "1 Jan 3000")
 
+    def test_fit_first_millennium_should_display_the_millennium_that_is_in_the_center(self):
+        self.when_navigating(fit_millennium_fn, "1 Jan 10", "2 Jan 10")
+        self.then_period_becomes("1 Jan 10", "1 Jan 1010")
+
     def test_move_page_smart_not_smart_forward(self):
         self.when_navigating(forward_fn, "1 Jan 2010", "5 Jan 2010")
         self.then_period_becomes("5 Jan 2010", "9 Jan 2010")
