@@ -392,11 +392,16 @@ def backward_one_year_fn(main_frame, current_period, navigation_fn):
 
 def fit_millennium_fn(main_frame, current_period, navigation_fn):
     mean = current_period.mean_time()
-    start = datetime(int(mean.year/1000)*1000, 1, 1)
-    end = datetime(int(mean.year/1000)*1000 + 1000, 1, 1)
+    year = max(get_min_year(), int(mean.year/1000)*1000)
+    start = datetime(year, 1, 1)
+    end = datetime(year + 1000, 1, 1)
     navigation_fn(lambda tp: tp.update(start, end))
 
 
+def get_min_year():
+    return PyTimeType().get_min_time()[0].year
+
+    
 def fit_century_fn(main_frame, current_period, navigation_fn):
     mean = current_period.mean_time()
     start = datetime(int(mean.year/100)*100, 1, 1)
