@@ -10,7 +10,9 @@ Bug fixes:
   * Adding multiple events without closing event dialog, works again.
   * Alert time comparision problem solved
   * Fixed problem with ends-today property
+  * Fit millennium now works close to edges
 
+  
 
 Timeline 0.17.0, released on 15 June 2012
 =========================================
